ZIG-390: Fix table pagination style on mobile.

--- a/src/components/Providers/ProvidersProfitsChart/ProvidersProfitsChart.scss
+++ b/src/components/Providers/ProvidersProfitsChart/ProvidersProfitsChart.scss
@@ -25,3 +25,12 @@
     padding: 0 24px 16px;
   }
 }
+
+@include media("<=sm") {
+  .providersProfitsChart {
+    h3 {
+      padding-top: 5px;
+      font-size: 16px;
+    }
+  }
+}
